Changed the directory and added a README file.

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 
 	<div id="container">
 		<header id="header">
-			<img src="../images/logo.svg" id="logo">
+			<img src="./images/logo.svg" id="logo">
 			<div id="header--menu-icon-box">
 				<ion-icon name="close-outline" class="opacity-0"></ion-icon>
 				<ion-icon name="menu-outline"></ion-icon>
@@ -86,12 +86,12 @@
 
 				<div class="grid-container">
 					<div class="grid-children">
-						<div class="fade" id="div-image2"><img src="../images/second.jpg"></div>
+						<div class="fade" id="div-image2"><img src="./images/second.jpg"></div>
 						<p class="preformatted">Merging retail, food, art, and culture, Canal Street Market highlights top retail and design concepts, restaurants, and up-and-coming players in the downtown New York City community.</p>
 					</div>
 
 					<div class="grid-children">
-						<div class="fade" id="div-image3"><img src="../images/third.jpg"></div>
+						<div class="fade" id="div-image3"><img src="./images/third.jpg"></div>
 
 						<div class="preformatted">
 							<p>Retail Market Hours:</p>
@@ -100,7 +100,7 @@
 					</div>
 
 					<div class="grid-children">
-						<div class="fade" id="div-image4"><img src="../images/fourth.jpg"></div>
+						<div class="fade" id="div-image4"><img src="./images/fourth.jpg"></div>
 
 						<div class="preformatted">
 							<p>Food Hall Hours:</p>
