--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="targetting">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,23 +11,23 @@
 </head>
 
 <body class="font-apercu-mono">
-	<div id="menu" class="absolute z-3 inset-0 bg-white overflow-y-auto hidden">
+	<div id="menu" class="fixed z-3 inset-0 overflow-y-auto overflow-x-hidden hidden opacity-0">
 		<div id="menu--options-outer-div" class="apercu-mono">
-			<div class="menu--options bg-c-white animate-option-1">
+			<div class="menu--options bg-c-white">
 				<a href="#" class="-rotate-45">About</a>
 			</div>
-			<div class="menu--options bg-c-blue animate-option-2">
+			<div class="menu--options bg-c-blue">
 				<a href="#" class="rotate-45">Food</a>
 			</div>
-			<div class="menu--options bg-c-red animate-option-3">
+			<div class="menu--options bg-c-red">
 				<a href="#" class="-rotate-45">Retail</a>
 			</div>
-			<div class="menu--options bg-c-gold animate-option-4">
+			<div class="menu--options bg-c-gold">
 				<a href="#" class="rotate-45">Community</a>
 			</div>
 		</div>
 
-		<div id="menu--more-info" class="p-[1.875rem]">
+		<div id="menu--more-info" class="p-[1.875rem] opacity-0 bg-white">
 			<a href="#" class="widelink" id="more-info--vendor">become a vendor</a>
 			<div class="preformatted">
 				<p>265 Canal Street</p>
@@ -54,8 +54,8 @@
 		<header id="header">
 			<img src="./images/logo.svg" id="logo">
 			<div id="header--menu-icon-box">
-				<ion-icon name="close-outline" class="opacity-0"></ion-icon>
-				<ion-icon name="menu-outline"></ion-icon>
+				<ion-icon name="close-outline" class="opacity-0 closeTheMenu"></ion-icon>
+				<ion-icon name="menu-outline" class="openTheMenu"></ion-icon>
 			</div>
 		</header>
 
@@ -72,26 +72,26 @@
 		</div>
 		
 
-		<main id="main" class="">
-			<section class="fade">
+		<main id="main">
+			<section>
 				<p class="first-section--text">Canal Street Market is a carefully curated retail market, food hall & community space open year-round at 265 Canal Street. <a href="#" id="anim-link">Support Small Business</a> this weekend!</p>
 			</section>
 
-			<div class="fade" id="first-image">
-				<div id="first-image--image"></div>
+			<div id="first-image">
+				<div id="first-image--image" class="fade"></div>
 			</div>
 
-			<section class="fade" id="second-section">
+			<section id="second-section">
 				<h2 id="second-section--header">A New Kind of Market</h2>
 
 				<div class="grid-container">
 					<div class="grid-children">
-						<div class="fade" id="div-image2"><img src="./images/second.jpg"></div>
+						<div id="div-image2" class="fade"><img src="./images/second.jpg"></div>
 						<p class="preformatted">Merging retail, food, art, and culture, Canal Street Market highlights top retail and design concepts, restaurants, and up-and-coming players in the downtown New York City community.</p>
 					</div>
 
 					<div class="grid-children">
-						<div class="fade" id="div-image3"><img src="./images/third.jpg"></div>
+						<div id="div-image3" class="fade"><img src="./images/third.jpg"></div>
 
 						<div class="preformatted">
 							<p>Retail Market Hours:</p>
@@ -100,7 +100,7 @@
 					</div>
 
 					<div class="grid-children">
-						<div class="fade" id="div-image4"><img src="./images/fourth.jpg"></div>
+						<div id="div-image4" class="fade"><img src="./images/fourth.jpg"></div>
 
 						<div class="preformatted">
 							<p>Food Hall Hours:</p>
@@ -111,13 +111,13 @@
 				</div>
 			</section>
 
-			<section class="fade" id="third-section">
+			<section id="third-section">
 				<h2 class="foreign third-section--headers">活動</h2>
 				<h2 class="third-section--headers">Market Events</h2>
 				<h2 class="foreign third-section--headers bg-24_1 bg-lines bg-left-bottom bg-repeat-x ">活動</h2>
 			</section>
 
-			<section class="fade" id="fourth-section">
+			<section id="fourth-section">
 				<div class="double-dash">
 					<p class="double-dash--date">10/22</p>
 					<p class="double-dash--info">Small Business Retail Pop Up Weekend!</p>
@@ -136,18 +136,18 @@
 				<a href="#" class="widelink fourth-section--link">see all</a>
 			</section>
 
-			<section class="fade" id="fifth-section">
+			<section id="fifth-section">
 				<p id="fifth-section--location" class="moving-lines">265 Canal St. New York, NY</p>
 			</section>
 
-			<section class="fade" id="sixth-section">
+			<section id="sixth-section">
 				<div id="sixth-section--div">
 					<p id="sixth-section--vendor">Interested in becoming a vendor?</p>
 					<a href="#" class="widelink sixth-section--vendor-link">click here</a>
 				</div>
 			</section>
 
-			<footer class="fade" id="footer">
+			<footer id="footer">
 				<div class="footer--reach-us">
 					<ion-icon name="pencil-outline" class="footer--reach-us-icon"></ion-icon>
 					<div class="preformatted">
