Started working on screens greater than 768px

--- a/public/index.html
+++ b/public/index.html
@@ -105,13 +105,13 @@
 				</div>
 			</section>
 
-			<section id="third-section">
+			<section id="third-section" class="single-dash">
 				<h2 class="foreign third-section--headers">活動</h2>
 				<h2 class="third-section--headers">Market Events</h2>
-				<h2 class="foreign third-section--headers bg-24_1 bg-lines bg-left-bottom bg-repeat-x ">活動</h2>
+				<h2 class="foreign third-section--headers single-dash md:bg-none">活動</h2>
 			</section>
 
-			<section id="fourth-section">
+			<section id="fourth-section" class="grid-container">
 				<div class="double-dash">
 					<p class="double-dash--date">10/22</p>
 					<p class="double-dash--info">Small Business Retail Pop Up Weekend!</p>
