Made advancement to >768px

--- a/public/index.html
+++ b/public/index.html
@@ -132,6 +132,9 @@
 
 			<section id="fifth-section">
 				<p id="fifth-section--location" class="moving-lines">265 Canal St. New York, NY</p>
+				<a href="https://goo.gl/maps/vcs2WBqwMUWFdH8w8">
+					<img src="./images/location-image.avif">
+				</a>
 			</section>
 
 			<section id="sixth-section">
