Made more major updates.

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="targetting">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -105,34 +105,35 @@
 				</div>
 			</section>
 
-			<section id="third-section" class="single-dash">
+			<section id="third-section">
 				<h2 class="foreign third-section--headers">活動</h2>
 				<h2 class="third-section--headers">Market Events</h2>
-				<h2 class="foreign third-section--headers single-dash md:bg-none">活動</h2>
+				<h2 class="foreign third-section--headers">活動</h2>
 			</section>
 
-			<section id="fourth-section" class="grid-container">
-				<div class="double-dash">
-					<p class="double-dash--date">10/22</p>
-					<p class="double-dash--info">Small Business Retail Pop Up Weekend!</p>
-				</div>
+			<section id="fourth-section">
+				<div id="fourth-section--div" class="grid-container">
+					<div class="double-dash">
+						<p class="double-dash--date">10/22</p>
+						<p class="double-dash--info">Small Business Retail Pop Up Weekend!</p>
+					</div>
 
-				<div class="double-dash">
-					<p class="double-dash--date">02/07</p>
-					<p class="double-dash--info">New Balance x Paperboy Paris by Greenhouse @ Canal Street Market</p>
-				</div>
+					<div class="double-dash">
+						<p class="double-dash--date">02/07</p>
+						<p class="double-dash--info">New Balance x Paperboy Paris by Greenhouse @ Canal Street Market</p>
+					</div>
 
-				<div class="double-dash">
-					<p class="double-dash--date">12/11</p>
-					<p class="double-dash--info">Hack City 12/11</p>
-				</div>
-
+					<div class="double-dash">
+						<p class="double-dash--date">12/11</p>
+						<p class="double-dash--info">Hack City 12/11</p>
+					</div>
+				</div>				
 				<a href="#" class="widelink fourth-section--link">see all</a>
 			</section>
 
 			<section id="fifth-section">
-				<p id="fifth-section--location" class="moving-lines">265 Canal St. New York, NY</p>
-				<a href="https://goo.gl/maps/vcs2WBqwMUWFdH8w8">
+				<p id="fifth-section--address">265 Canal St. New York, NY</p>
+				<a href="https://goo.gl/maps/vcs2WBqwMUWFdH8w8" target="_blank" id="fifth-section--location">
 					<img src="./images/location-image.avif">
 				</a>
 			</section>
@@ -145,26 +146,28 @@
 			</section>
 
 			<footer id="footer">
-				<div class="footer--reach-us">
-					<ion-icon name="pencil-outline" class="footer--reach-us-icon"></ion-icon>
-					<div class="preformatted">
-						<p>Email us</p>
+				<div>
+					<div class="footer--reach-us">
+						<ion-icon name="pencil-outline" class="footer--reach-us-icon"></ion-icon>
+						<div class="preformatted">
+							<p>Email us</p>
+						</div>
 					</div>
-				</div>
 
-				<div class="footer--reach-us">
-					<ion-icon name="logo-facebook" class="footer--reach-us-icon"></ion-icon>
-					<div class="preformatted">
-						<p>Follow us</p>
-						<p>on facebook</p>
+					<div class="footer--reach-us">
+						<ion-icon name="logo-facebook" class="footer--reach-us-icon"></ion-icon>
+						<div class="preformatted">
+							<p>Follow us</p>
+							<p>on facebook</p>
+						</div>
 					</div>
-				</div>
 
-				<div class="footer--reach-us">
-					<ion-icon name="logo-instagram" class="footer--reach-us-icon"></ion-icon>
-					<div class="preformatted">
-						<p>Follow us</p>
-						<p>on instagram</p>
+					<div class="footer--reach-us">
+						<ion-icon name="logo-instagram" class="footer--reach-us-icon"></ion-icon>
+						<div class="preformatted">
+							<p>Follow us</p>
+							<p>on instagram</p>
+						</div>
 					</div>
 				</div>
 
