Some tiny advancements

--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
 			</section>
 
 			<footer id="footer">
-				<div>
+				<div id="footer--idk">
 					<div class="footer--reach-us">
 						<ion-icon name="pencil-outline" class="footer--reach-us-icon"></ion-icon>
 						<div class="preformatted">
