Almost done with styling

--- a/public/index.html
+++ b/public/index.html
@@ -171,10 +171,11 @@
 					</div>
 				</div>
 
-				<div class="footer--reach-us footer--email">
+				<div class="footer--reach-us" id="footer--email">
 					<div class="preformatted">
+						<p id="footer--big-screen">Stay up to date with our newsletter</p>
 						<ion-icon name="mail-outline" class="footer--reach-us-icon"></ion-icon>
-						<p>Get updates in your inbox</p>
+						<p id="footer--small-screen">Get updates in your inbox</p>
 						<div class="footer--input-email">
 							<input id="footer--input-email-field" type="email" name="email" placeholder="Email">
 							<ion-icon name="arrow-forward-outline" class="footer--input-email-enter-btn"></ion-icon>
