Added animations, fixed issue where button doesn't respond. Sort of fixed the loading images issue.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 	<title>Canal Street Market</title>
 </head>
 
-<body class="font-apercu-mono">
+<body class="font-apercu-mono opacity-0 animate-bodyOpacity md:animate-bodyOpacityFast">
 	<div id="menu" class="fixed z-3 inset-0 overflow-y-auto overflow-x-hidden hidden opacity-0 md:hidden">
 		<div id="menu--options-outer-div" class="apercu-mono">
 			<div class="menu--options bg-c-white">
@@ -59,10 +59,10 @@
 			</div>
 		</header>
 
-		<nav id="side-navigation" class="hidden">
-			<a href="#" class="side--navigation-links bg-c-blue before:content-['餐饮'] ">Food</a>
-			<a href="#" class="side--navigation-links bg-c-red before:content-['購物'] ">Retail</a>
-			<a href="#" class="side--navigation-links bg-c-gold before:content-['文化'] ">Community</a>
+		<nav id="side-navigation">
+			<a href="#" class="side--navigation-links bg-c-blue before:content-['餐饮'] md:animate-sideNav-2">Food</a>
+			<a href="#" class="side--navigation-links bg-c-red before:content-['購物'] md:animate-sideNav-1">Retail</a>
+			<a href="#" class="side--navigation-links bg-c-gold before:content-['文化'] md:animate-sideNav-0">Community</a>
 		</nav>
 		
 
