--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@
 			</section>
 
 			<section id="fifth-section">
-				<p id="fifth-section--address">265 Canal St. New York, NY</p>
+				<p id="fifth-section--address">265 Canal St. <span class="block">New York, NY</span></p>
 				<a href="https://goo.gl/maps/vcs2WBqwMUWFdH8w8" target="_blank" id="fifth-section--location">
 					<img src="./images/location-image.avif">
 				</a>
@@ -183,14 +183,16 @@
 					</div>
 				</div>
 
-				<div class="footer--bottom-divs mb-7">
-					<a href="#" class="footer--link">Privacy Policy</a>
-					<a href="#" class="footer--link">Vendor Login</a>
-				</div>
+				<div id="footer--bottom">
+					<div class="footer--bottom-divs">
+						<a href="#" class="footer--link">Privacy Policy</a>
+						<a href="#" class="footer--link">Vendor Login</a>
+					</div>
 
-				<div class="footer--bottom-divs">
-					<p>Site by <span class="line-through">Zero</span></p>
-					<p>Copyright Canal Street Market 2019</p>
+					<div class="footer--bottom-divs">
+						<p>Site by <span class="line-through">Zero</span></p>
+						<p>Copyright Canal Street Market 2019</p>
+					</div>
 				</div>
 			</footer>
 			</main>
